--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="contenedor">
+        <h1>Web</h1>
+    </div>
 </body>
 </html>
