Fondo de la barra.

--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <div class="contenedor">
+        <div class="barra">
+            <li>
+                
+                <ul><a href="">Home</a></ul>
+                <ul><a href="">Services</a></ul>
+                <ul><a href="">About us</a></ul>
+                <ul><a href="">Contact</a></ul>
+            </li>
+        </div>
         <h1>Web</h1>
     </div>
 </body>
