Mejoramos la barra

--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Estilos.css">
 </head>
+
 <body>
     <div class="contenedor">
         <div class="barra">
-            <li>
-                
-                <ul><a href="">Home</a></ul>
-                <ul><a href="">Services</a></ul>
-                <ul><a href="">About us</a></ul>
-                <ul><a href="">Contact</a></ul>
-            </li>
+            <ul class="lista-herramientas">
+                <li><a href="">Home</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">About us</a></li>
+                <li><a href="">Contact</a></li>
+
+                <div class="languages">
+                    <select name="languages" id="lang">
+                        <option value="ES">ES</option>
+                        <option value="EN">EN</option>
+                        <option value="IT">IT</option>
+                        <option value="FR">FR</option>
+                        <option value="PT">PT</option>
+                    </select>
+            </ul>
+           
+            </div>
         </div>
         <h1>Web</h1>
     </div>
 </body>
+
 </html>
