--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -12,7 +12,7 @@
     <div class="contenedor">
         <div class="barra">
             <ul class="lista-herramientas">
-                <li><a href="">Home</a></li>
+                <img id="logo" src="imagenes/1.png" alt="Logo">
                 <li><a href="">Services</a></li>
                 <li><a href="">About us</a></li>
                 <li><a href="">Contact</a></li>
@@ -26,11 +26,12 @@
                         <option value="PT">PT</option>
                     </select>
             </ul>
-           
-            </div>
+
         </div>
-        <h1>Web</h1>
+
+        <img id="imagen-fondo" src="imagenes/img_yate.jpg" alt="Imagen fondo">
     </div>
+  
 </body>
 
 </html>
