Fijamos la barra para que se vea siempre

--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SaltYacht</title>
     <link rel="stylesheet" href="Estilos.css">
+    <link rel="shortcut icon" href="imagenes/1.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="contenedor">
         <div class="barra">
             <ul class="lista-herramientas">
-                <img id="logo" src="imagenes/1.png" alt="Logo">
+                <a id="logo" href="#imagen-fondo"><img  src="imagenes/1.png" alt="Logo"></a>
+                
                 <li><a href="">Services</a></li>
                 <li><a href="">About us</a></li>
                 <li><a href="">Contact</a></li>
