probamos una forma diferente para la nav

--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -15,12 +15,12 @@
             <ul class="lista-herramientas">
                 <li><a id="logo" href="Index.html"><img src="imagenes/1.png" alt="Logo"></a></li>
 
-                <li  ><a class="barra-list" href="">Services</a>
+                <li><a class="barra-list" href="">Services</a>
                     <div class="dropdownMenu">
                         <ul class="list">
-                            <li ><a class="item-menu" href="">servicios</a></li>
-                            <li ><a class="item-menu" href="">servicios</a></li>
-                            <li ><a class="item-menu" href="">servicios</a></li>
+                            <li><a class="item-menu" href="">Servicios 1</a></li>
+                            <li><a class="item-menu" href="">Servicios 2</a></li>
+                            <li><a class="item-menu" href="">Servicios 3</a></li>
                         </ul>
                     </div>
                 </li>
