--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -12,12 +12,21 @@
 <body>
     <div class="contenedor">
         <div class="barra">
-            <ul class="lista-herramientas">
-                <a id="logo" href="#imagen-fondo"><img  src="imagenes/1.png" alt="Logo"></a>
-                
-                <li><a href="">Services</a></li>
-                <li><a href="">About us</a></li>
-                <li><a href="">Contact</a></li>
+            <ul class="lista-links">
+                <a id="logo" href="#imagen-fondo"><img src="imagenes/1.png" alt="Logo"></a>
+
+                <li class="links-nav"><a href="">Services</a>
+                    <div class="drop-down">
+                        <ul >
+                            <li class="item-links">Servicios 1</li>
+                            <li class="item-links">Servicios 1</li>
+                            <li class="item-links">Servicios 1</li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li class="links-nav"><a href="">About us</a></li>
+                <li class="links-nav"><a href="">Contact</a></li>
 
                 <div class="languages">
                     <select name="languages" id="lang">
@@ -33,7 +42,7 @@
 
         <img id="imagen-fondo" src="imagenes/img_yate.jpg" alt="Imagen fondo">
     </div>
-  
+
 </body>
 
 </html>
