modificacion breve de barra

--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -17,10 +17,10 @@
 
                 <li class="links-nav"><a href="">Services</a>
                     <div class="drop-down">
-                        <ul >
-                            <li class="item-links">Servicios 1</li>
-                            <li class="item-links">Servicios 1</li>
-                            <li class="item-links">Servicios 1</li>
+                        <ul class="lista">
+                            <li class="item-links"><a href="">Servicios 1</a></li>
+                            <li class="item-links"><a href="">Servicios 2</a></li>
+                            <li class="item-links"><a href="">Servicios 3</a></li>
                         </ul>
                     </div>
                 </li>
