mensaje de inicio.

--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -41,6 +41,13 @@
         </div>
 
         <img id="imagen-fondo" src="imagenes/img_yate.jpg" alt="Imagen fondo">
+        <div class="banner">
+            <h1>
+                limpia y organiza toda tu seguridad.
+            </h1>
+            <h2>Un forma facil y sencillo de usar.</h2>
+        </div>
+        
     </div>
 
 </body>
