--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -10,10 +10,30 @@
 </head>
 
 <body>
-    <div class="contenedor">
-       
-        
+
+    <div class="nav-bar">
+
+        <a id="logo" href="#home">
+            <img src="imagenes/1.png" alt="logo"></a>
+        <div class="navigation">
+            <ul class="nav">
+
+                <li> <a href="#">Link1</a></li>
+                <li> <a href="#">Link2</a></li>
+                <li> <a href="#">Link3</a></li>
+            </ul>
+        </div>
     </div>
+
+    <ul>
+        <li>
+            soso
+        </li>
+
+        <li>poso</li>
+    </ul>
+
+
 
 </body>
 
