cambiamos a header y nav la barra

--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -11,27 +11,49 @@
 
 <body>
 
-    <div class="nav-bar">
+    <header class="barra">
 
-        <a id="logo" href="#home">
-            <img src="imagenes/1.png" alt="logo"></a>
-        <div class="navigation">
-            <ul class="nav">
+        <nav>
+            <ul class="lista-links">
 
-                <li> <a href="#">Link1</a></li>
-                <li> <a href="#">Link2</a></li>
-                <li> <a href="#">Link3</a></li>
+                <a id="logo" href="#imagen-fondo"><img src="imagenes/1.png" alt="Logo"></a>
+                <li class="links-nav"><a href="">Services</a>
+                    <div class="drop-down">
+                        <ul class="lista">
+                            <li class="item-links"><a href="">Servicios 1</a></li>
+                            <li class="item-links"><a href="">Servicios 2</a></li>
+                            <li class="item-links"><a href="">Servicios 3</a></li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li class="links-nav"><a href="">About us</a></li>
+                <li class="links-nav"><a href="">Contact</a></li>
             </ul>
-        </div>
+        </nav>
+        <nav class="lang">
+            <select name="languages" id="lang">
+                <option value="ES">ES</option>
+                <option value="EN">EN</option>
+                <option value="IT">IT</option>
+                <option value="FR">FR</option>
+                <option value="PT">PT</option>
+            </select>
+        </nav>
+
+    </header>
+
+    <img id="imagen-fondo" src="imagenes/img_yate.jpg" alt="Imagen fondo">
+    <div class="banner">
+        <h1>
+            limpia y organiza toda tu seguridad.
+        </h1>
+        <h2>Un forma facil y sencillo de usar.</h2>
     </div>
 
-    <ul>
-        <li>
-            soso
-        </li>
+    <div class="input">
 
-        <li>poso</li>
-    </ul>
+    </div>
 
 
 
