Ajustamos la imagen de fondo principal.

--- a/WorkspaceYS/Index.html
+++ b/WorkspaceYS/Index.html
@@ -16,7 +16,7 @@
 <body>
 
     <header class="barra">
-        <div>
+        <div class="logo-principal">
             <a id="logo" href="#imagen-fondo"><img src="imagenes/1.png" alt="Logo"></a>
         </div>
 
